# cloud_slayer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cloudslayer/: analyzer.py  cli.py  config.py  console.py  dsl.py  engine.py  models.py  pricing.py  renderer.py  scanner.py  strategies.py  tui.py
cloudslayer/connectors/: aws.py  azure.py  gcp.py
cloudslayer/providers/: __init__.py
cloudslayer/providers/compute/: __init__.py  base.py
cloudslayer/providers/compute/aws/: ec2.py
cloudslayer/providers/compute/azure/: vm.py
cloudslayer/providers/compute/gcp/: gce.py
cloudslayer/providers/database/: __init__.py  base.py
cloudslayer/providers/database/aws/: rds.py
cloudslayer/providers/database/azure/: __init__.py  postgres.py
cloudslayer/providers/database/gcp/: cloudsql.py
cloudslayer/providers/serverless/: __init__.py  base.py
cloudslayer/providers/serverless/aws/: functions.py
cloudslayer/providers/serverless/azure/: functions.py
cloudslayer/providers/serverless/gcp/: functions.py
cloudslayer/providers/storage/: __init__.py  base.py
cloudslayer/providers/storage/aws/: s3.py
cloudslayer/providers/storage/azure/: blob.py
cloudslayer/providers/storage/gcp/: storage.py
examples/: basic.hcl
examples/01-startup-aws/: main.tf
examples/02-saas-aws/: main.tf
examples/03-gcp-app/: main.tf
examples/04-azure-team/: main.tf
tests/: conftest.py  test_connector_aws.py  test_dsl.py  test_engine.py  test_pricing_modes.py  test_providers.py  test_scanner.py  test_strategies.py  test_tui_pricing.py
