[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudslayer"
version = "0.3.0"
description = "Compare cloud costs across every major provider before you deploy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "cloudslayer contributors"},
]
keywords = ["cloud", "cost", "terraform", "infrastructure", "finops", "devops", "aws", "gcp", "azure", "hetzner", "multicloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-hcl2>=4",
    "requests>=2.31",
    "textual>=8.2.8",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
]
gcp = [
    "google-cloud-compute>=1.11",
    "google-auth>=2.0",
]
azure = [
    "azure-mgmt-compute>=30.0",
    "azure-identity>=1.15",
]
all = [
    "boto3>=1.34",
    "google-cloud-compute>=1.11",
    "google-auth>=2.0",
    "azure-mgmt-compute>=30.0",
    "azure-identity>=1.15",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "moto[ce,s3,ec2,rds]>=5",   # AWS mock for tests
]

[project.urls]
Homepage = "https://github.com/cloudslayer-dev/cloudslayer"
Repository = "https://github.com/cloudslayer-dev/cloudslayer"
Issues = "https://github.com/cloudslayer-dev/cloudslayer/issues"
Changelog = "https://github.com/cloudslayer-dev/cloudslayer/blob/main/CHANGELOG.md"

[project.scripts]
cloudslayer = "cloudslayer.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudslayer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "boto3>=1.34",
    "moto[ce,ec2,rds,s3]>=5",
    "pytest>=9.1.1",
]
